samples/_failures_safe/1761487922_69c18d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9f5aae4.c: In function ‘main’:
./samples/SAFE/__tmp_b9f5aae4.c:151:25: error: missing terminating " character
  151 |         fprintf(stderr, "Size mismatch
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b9f5aae4.c:151:9: error: expected expression at end of input
  151 |         fprintf(stderr, "Size mismatch
      |         ^~~~~~~
./samples/SAFE/__tmp_b9f5aae4.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b9f5aae4.c:151:9: error: expected declaration or statement at end of input
